# memos

./: .gitignore  CURRENT_SITUATION.md  DEVELOPMENT_PHASES.md  Dockerfile  GKE_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PAYMENT_BILLING_SYSTEM.md  PROJECT_STATUS.md  SDK_QUICK_REFERENCE.md  cleanup_orphans.py  cleanup_sqlite_db.py  cloudrun_workspace_manager.py  create_user_via_api.py  debug_database.py  demo_cloud_storage_complete.py  env.example  gcloud_auth.py  interactive_shell.py  interactive_shell_demo.py  onmemos_admin_bootstrap.sh  onmemos_e2e_dual_mount.sh  onmemos_e2e_filestore_test.sh  onmemos_e2e_full.sh  onmemos_e2e_gcsfuse_test.sh  onmemos_provision.sh  priv.sh  refactor_backend.sh  requirements-system.txt  requirements.txt  requirements_database.txt  reset_test_user.py  run_sanity_driver.py  sanity_e2e.py  sdk_e2e.py  setup-dev-environment.ps1  setup_persistent_storage.py  simple_fractional_test.py  start_admin.sh  start_admin_server.py  start_public.sh  (+36 more)
data/: onmemos_dev.db-shm  onmemos_dev.db-wal
docs/: API_REFERENCE.md  BACKEND_PIPELINE.md  README.md
examples/: README.md  agentic_service_demo.py  multi_storage_test.py  multi_tenant_service_demo.py  payment_billing_demo.py  simple_gke_test.py
examples/advanced/: demo_data_science_workspace.py  demo_data_science_workspace_simple.py  demo_integration.py  demo_real_implementation.py  demo_real_world.py
examples/auto-cleanup/: demo_auto_cleanup.py
examples/basic/: demo_simple.py  explore_sdk.py  explore_sdk_simple.py
examples/cloud-integration/: demo_bucket_features.py  demo_cloud_persistent_storage.py  demo_unified_gcp_namespace.py
examples/namespace-management/: demo_reusable_namespace.py  demo_user_namespace_hierarchy.py
images/python-runner/: Dockerfile  runner.py
onmemos-sdk/: README.md  SDK_SUMMARY.md  pyproject.toml  test_sdk_structure.py
onmemos-sdk/examples/: auto_api_key_demo.py  basic_usage.py
onmemos-sdk/src/onmemos/: __init__.py
onmemos-sdk/src/onmemos/core/: __init__.py  auth.py  client.py  config.py  exceptions.py  http.py
onmemos-sdk/src/onmemos/models/: __init__.py  base.py  sessions.py  storage.py  templates.py
onmemos-sdk/src/onmemos/services/: __init__.py  cost_estimation.py  sessions.py  shell.py  storage.py  templates.py
ops/: Caddyfile  config.yaml  onmemos-api.service
sdk/python/: __init__.py  client.py  exceptions.py  models.py  session_client.py
server/: __init__.py  app.py  app_admin.py  app_public.py
server/api/: admin.py  billing.py  cloudrun.py  cost_estimation.py  gke.py  gke_websocket.py  sessions.py  storage.py  templates.py
server/core/: config.py  logging.py  security.py  utils.py
server/database/: base.py  factory.py  mysql_client.py  sqlite_temp_client.py
server/managers/: __init__.py  namespace_manager.py  storage_manager.py  workspace_manager.py
server/models/: session_templates.py  sessions.py  users.py
server/services/: billing_service.py  cost_estimation.py  session_monitor.py  shell_service.py  user_management.py
server/services/cloudrun/: cloudrun_service.py
server/services/gcp/: __init__.py  auth_service.py  bucket_service.py  disk_service.py
server/services/gke/: gke_service.py  gke_websocket_shell.py
server/templates/: python.yaml
server/websockets/: cloudrun_shell.py
starbase/: LICENSE  README.md
starbase/starbase/: client.py  errors.py  models.py  shuttles.py
starbase_local/: pyproject.toml
starbase_local/starbase/: __init__.py  client.py  config.py  drives.py  http.py  missions.py  shuttles.py  vaults.py
tests/: README.md  __init__.py  test_integration_real.py
tests/bucket/: test_bucket_operations.py
tests/cloud/: debug_bucket_service.py  test_bucket_implementation.py  test_gcp_persistent_storage.py
tests/crud/: test_list_clone_verify.py  test_sdk_crud_operations.py
tests/e2e/: test_runner_protocol.py
tests/integration/: debug_permissions.py  run_tests.py  test_sdk.py
tests/namespace/: test_namespace_storage_access.py
tests/performance/: test_utils_performance.py
tests/secrets/: test_secrets_namespaces.py  test_secrets_with_code.py
tests/security/: test_path_traversal.py
tests/unit/: test_config.py  test_models.py  test_simple.py  test_utils.py
(+7 files in other folders)
